@@ -76,9 +76,9 @@
 <a name="pygame.scrap.put">
 <big><b>pygame.scrap.put</big></b><br><ul>
   <i>Puts stuff into the clipboard.</i><br>
-  <tt>pygame.scrap.put(pygame.locals.SCRAP_TEXT, "hello clipboard"): return None.</tt><br>
-  <tt>pygame.scrap.put(pygame.locals.SCRAP_BMP, "hello clipboard"): return None.</tt><br>
- &nbsp;<br> 
+  <tt>pygame.scrap.put(pygame.locals.SCRAP_TEXT, 'hello clipboard'): return None.</tt><br>
+  <tt>pygame.scrap.put(pygame.locals.SCRAP_BMP, 'hello clipboard'): return None.</tt><br>
+<p>Puts the stuff into the clipboard. </p>
 <!--COMMENTS:pygame.scrap.put--> &nbsp;<br> 
 <br></ul>
 
